--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +104,27 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+.container {
+  max-width: 900px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin: 0 auto;
+}
+
+main {
+  min-height: calc(100vh - 22px - 85px);
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+header {
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-style: 14px;
+  height: 85px;
+  color: #fff;
 }
